<resources>
    <string name="app_name">Landmark remark</string>
    <string name="title_map">Map</string>
    <string name="title_my_notes">My Notes</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_sheet_marker">Title</string>
    <string name="desc_sheet_marker">Description</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>

    <string name="geo_point">(%1$f, %2$f)</string>
    <!-- Strings related to login -->
    <string name="prompt_user_name">User name</string>
    <string name="prompt_password">Password</string>
    <string name="action_continue">Continue</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>

    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_geopoint">GeoPoint</string>
    <string name="item_date_time">Date Time</string>
    <string name="item_description">Description</string>
    <string name="item_title">Title</string>
    <string name="btnDelMarker">delete</string>
    <string name="edt_search">Search notes by user name</string>

</resources>