<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dropdown_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_border_set"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/dropdown_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="@string/item_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="100dp"
        android:layout_height="0.80dp"
        android:background="@color/blue" />

    <TextView
        android:id="@+id/dropdown_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:text="@string/item_description"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dropdown_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="@string/prompt_user_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dropdown_gpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/item_geopoint"
        android:textSize="16sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/dropdown_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/item_date_time"
        android:textSize="16sp"
        android:textStyle="italic" />


</LinearLayout>
