<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    tools:context=".ui.bottomsheet.markernew.MarkerNewSheetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <ProgressBar
            android:id="@+id/progessBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:indeterminateTint="@color/blue"
            android:scaleX="8"
            android:scaleY="4"
            android:visibility="gone" />


        <EditText
            android:id="@+id/edtMarkerTitle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/round_edit_text"
            android:backgroundTint="@color/light_grey"
            android:hint="@string/title_sheet_marker"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edtMarkerDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/round_edit_text"
            android:backgroundTint="@color/light_grey"
            android:hint="@string/desc_sheet_marker"
            android:inputType="textMultiLine"
            android:lines="3"
            android:padding="10dp" />

        <TextView
            android:id="@+id/txtGeoPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btnSaveMarker"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/teal_700"
            android:text="@string/btn_save" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>